--- a/speAbout.html
+++ b/speAbout.html
@@ -33,7 +33,7 @@
         <h1>演奏会概要</h1>
         <div class="time">
             <h2>日時</h2>
-            <h3>9月7日(月)</h3>
+            <h3>9月10日(金)</h3>
         </div>
         <div class="place">
             <h2>会場</h2>
@@ -56,20 +56,20 @@
             <h3>
                 <ul>
                     <li>実行委員長 : 中村 奏太</li>
-                    <li>副実行委員長 : 中川 聖那</li>
-                    <li>会計監査 : 宮川 開成</br>
-                             <span class="kai">今井 那雄行</span></br>
-                             <span class="kai">佐藤 陽香</span></li>
-                    <li>総務 : 原田 慶紀</li>
-                    <li>渉外 : 中尾 百合子</br>
-                          <span class=syo>古江 桃子</span></br>
-                          <span class=syo>白石 紗彩</span>
+                    <li>副実行委員長 : 塚本 健太</li>
+                    <li>会計監査 : 局員</br>
+                             <span class="kai">局員</span></br>
+                             <span class="kai">局員</span></li>
+                    <li>総務 : 局員</li>
+                    <li>渉外 : 局員</br>
+                          <span class=syo>局員</span></br>
+                          <span class=syo>局員</span>
                         </li>
-                    <li>製作・広報 : 内田 美那</br>
-                               <span class="sei">　　秦 悠希奈</span></br>
-                             　<span class="sei">　吉澤 敬子</span>
+                    <li>製作・広報 : 局員</br>
+                               <span class="sei">　局員</span></br>
+                             　<span class="sei">　局員</span>
                     </li>
-                    <li>web製作 : 河野 英瑠</li>
+                    <li>web製作 : 局員</li>
                 </ul>
             </h3>
         </div>
