--- a/speAbout.html
+++ b/speAbout.html
@@ -69,7 +69,7 @@
                                <span class="sei">　局員</span></br>
                              　<span class="sei">　局員</span>
                     </li>
-                    <li>web製作 : 局員</li>
+                    <li>web製作 : 河野 英瑠</li>
                 </ul>
             </h3>
         </div>
