--- a/speAbout.html
+++ b/speAbout.html
@@ -45,7 +45,10 @@
         </div>
         <div class="specialSponsor">
             <h2>特別協賛</h2>
-            <h3></h3>
+            <h3>
+                オリエンタル白石株式会社</br>
+                アルル音楽教室</br>
+            </h3>
         </div>
         <div class="sponsor">
             <h2>協賛</h2>
