--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li class="title">夏の響演</li>
                     <li class="sub-title">~大学をつなぐ音楽の祭典~</li>
                     <li class="day">2021.9.10(Fri)</li>
-                    <li class="time">11:00 ~ </li>
+                    <li class="time">11:00 開演 </li>
                     <a href="place.html" class="place">会場</a>
                     <li class="specific-place">豊洲シビックセンター</li>
                     <a href="production.html" class="participant">参加大学</a>
