--- a/production.html
+++ b/production.html
@@ -44,7 +44,7 @@
         <div class="ikashika">
             <img src="ikashikadai.jpg" width="600px" height="360px";>
             <p>
-                <span>東京医科歯科大学ピアノの会</span></br>
+                <span>東京医科歯科大学ピアノの会(今年度は参加なし)</span></br>
                 ​こんにちは！当ピアノの会は普段学外のホールや大学附属病院、</br>
                 チャリティイベント等で演奏させて頂いております。</br>
                 今年も素敵なホールで演奏できることを皆楽しみにしています。</br>
@@ -65,7 +65,7 @@
         <div class="dentudai">
             <img src="dentsudai2021.jpg" width="600px" height="360px";>
             <p>
-                <span>電気通信大学ピアノの会</span></br>
+                <span>電気通信大学ピアノの会（今年度は参加なし）</span></br>
                 電通大ピアノの会です。今回は特にEmotionalな曲が揃いました。</br>
                コンピュータ漬けの生活のせいで脳がデジタル化されつつ</br>
                ある我々ですが、1か0かでは表せない、</br>
@@ -86,7 +86,7 @@
         <div class="toukoudai">
             <img src="toukoudai.png" width="600px" height="360px";>
             <p>
-                <span>東京工業大学プラタナスの会</span></br>
+                <span>東京工業大学プラタナスの会（今年度は参加なし）</span></br>
                 我々は東工大の音楽好きが集まった団体です。</br>
                 小さな団体ゆえに、今回お誘い頂いたことは大変画期的なことで、</br>
                 主催者並びに参加団体の皆様に感謝申し上げます。</br>
