--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class = "introduction">
             <h1>夏の響演の概要</h1>
         </div>
-        <img class="poster" src="ポスター2021.png">
+        <img class="poster" src="poster2021_1.jpg">
         
             <div class="contents-text">
                 <ul>
