--- a/about.html
+++ b/about.html
@@ -82,7 +82,9 @@
             <a href="https://www.tiaa-jp.com">
                 <img src="geizyutu.png" width="300px"; height="100px";>
             </a>
-            <img src="sanken.png" width="300px"; height="100px";>
+            <a href = "https://www.navida.ne.jp/snavi/100580_1.html">
+                <img src="sanken.png" width="300px"; height="100px";>
+            </a>
         </div>
     </footer><!--フッター終わり!-->
 </body>
