--- a/answer.html
+++ b/answer.html
@@ -20,7 +20,9 @@
             <a href="https://www.tiaa-jp.com">
                 <img src="geizyutu.png" width="300px"; height="100px";>
             </a>
-            <img src="#" width="200px"; height="30px";>
+             <a href = "https://www.navida.ne.jp/snavi/100580_1.html">
+                <img src="sanken" width="200px"; height="30px";>
+            </a>
         </div>
     </footer><!--フッター終わり!-->
 </head>
